# qa_guru_lesson_19_poetry

qa_guru_lesson_19_poetry/: pyproject.toml
qa_guru_lesson_19_poetry/tests/: conftest.py
