[tool.poetry]
name = "qa-guru-lesson-19-poetry"
version = "0.1.0"
description = "Test project for 19 lesson"
authors = ["Mossymoon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.4.2"
selene = "2.0.0rc4"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
